@@ -115,7 +115,7 @@
         </dependency>
 
     </dependencies>
-    <build>
+   <build>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
@@ -128,14 +128,16 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.20</version>
+                <version>2.12.4</version>
                 <configuration>
                     <argLine>
                         -javaagent:"${settings.localRepository}/org/aspectj/aspectjweaver/${aspectj.version}/aspectjweaver-${aspectj.version}.jar"
                     </argLine>
+                    <argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
                     <suiteXmlFiles>
-                        <suiteXmlFile>src/test/java/XML/testng.xml</suiteXmlFile>
-                        <!--&lt;!&ndash;<suiteXmlFile>${suiteXmlFile}</suiteXmlFile>&ndash;&gt;-->
+                        <!--<suiteXmlFile>src/test/java/XML/suiteAPITesting.xml</suiteXmlFile>-->
+                        <!--<suiteXmlFile>src/test/java/XML/testng.xml</suiteXmlFile>-->
+                        <!--<suiteXmlFile>${suiteXmlFile}</suiteXmlFile>-->
                     </suiteXmlFiles>
                 </configuration>
                 <dependencies>
